# uplog

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: analytics.py  archive.py  config.py  db.py  main.py  probes.py  routes.py  scheduler.py
app/static/: app.js  styles.css
app/templates/: dashboard.html
docs/: raspberry-pi-setup.md
